fixed vertical alignment

--- a/scm-ui/styles/scm.scss
+++ b/scm-ui/styles/scm.scss
@@ -202,7 +202,7 @@ $fa-font-path: "webfonts";
 }
 
 // forms
-.field:not(.is-grouped) {
+form .field:not(.is-grouped) {
   margin-bottom: 1rem;
 }
 .input,
